# hipfort_minicourse

./: CMakeLists.txt  LICENSE  README.md  rocky8_cuda_hip.def
example/hello_world/: hello_world.cpp  hello_world.cu
example/laplacian/: CMakeLists.txt  Makefile  kernel.cpp  main_cpu.f90  main_hipfort.f90  plot_fctn.py
example/tensoradd/: CMakeLists.txt  Makefile  tensor_lib.mod
example/vecadd/: Makefile  hip_implementation.cpp
example/vecadd_cuda/: Makefile  cuda_implementation.cu  main.f90
